# Piscine-Python-Django

./: README.md
d00/ex00/: myawesomescript.sh
d00/ex01/: cv.html
d00/ex02/: form.html
d00/ex03/: copy.html
d00/ex04/: snippets.html
d00/ex05/: index.html
d01/ex00/: var.py
d01/ex01/: numbers.py
d01/ex02/:  var_to_dict.py
d01/ex03/: capital_city.py
d01/ex04/: state.py
d01/ex05/: all_in.py
d01/ex06/: my_sort.py
d01/ex07/: periodic_table.html
d02/ex00/: myCV.html  myCV.template  settings.py
d02/ex01/: intern.py
d02/ex04/: elem.py
d02/ex06/: Page.py  __test_write_to_file.html  elem.py  elements.py
d03/ex01/: my_program.py  my_script.sh
d03/ex02/: request_wikipedia.py  requirement.txt
d03/ex03/: roads_to_philosophy.py
d03/ex04/: my_script.sh
d03/ex05/: my_script.sh  requirement.txt
d03/ex05/helloproject/: db.sqlite3
d04/ex00/: my_script.sh
d04/ex00/d04/: db.sqlite3
d04/ex01/: my_script.sh
d04/ex02/: my_script.sh
d05/: db.sqlite3  my_script.sh
d05/d05/: settings.py  urls.py
d05/d05/d05/: settings.py  (+1 more)
d05/ex05/: models.py  urls.py  views.py
d05/ex06/: urls.py  views.py
d05/ex07/: models.py  urls.py  views.py
d06/: my_script.sh  requirement.txt
d06/d06/: asgi.py  settings.py  urls.py  wsgi.py
d06/ex/: forms.py  models.py  urls.py  views.py
d07/: my_script.sh  requirement.txt
d08/: my_script.sh  requirement.txt  setup.cfg
d08/d08/: db.sqlite3
d08/d08/d08/: settings.py  urls.py
d08/d08/ex00/: forms.py  urls.py  views.py
d08/d08/ex00/migrations/: 0001_initial.py
d08/d08/ex00/templates/: index.html
(+65 files in other folders)
