[metadata]
name = django-d08
version = 0.1
long_description = file: README.md
author = jcomic
author_email = jcomic@student.21-school.ru
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.9
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.9
    django-bootstrap3 >= 15.0.0
    Pillow >= 8.2.0
